third_party/move/move-compiler-v2/tests/checking-lang-v2.2/lambda/inline-parity/lambda_return_typed.exp

Diagnostics:
error: Return not currently supported in inline functions
  ┌─ tests/checking-lang-v2.2/lambda/inline-parity/lambda_return_typed.move:3:2
  │
3 │     return f(b)
  │     ^^^^^^^^^^^
